# docs/swagger.json
@@ -46,7 +46,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/queries.Account"
+                            "$ref": "#/definitions/presenters.AccountPresenter"
                         }
                     },
                     "400": {
@@ -96,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/queries.Account"
+                            "$ref": "#/definitions/presenters.AccountPresenter"
                         }
                     },
                     "400": {
@@ -148,7 +148,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/queries.Transaction"
+                            "$ref": "#/definitions/presenters.TransactionPresenter"
                         }
                     },
                     "400": {
@@ -199,15 +199,12 @@
                 "amount": {
                     "type": "number"
                 },
-                "event_date": {
-                    "type": "string"
-                },
                 "operation_type_id": {
                     "type": "integer"
                 }
             }
         },
-        "queries.Account": {
+        "presenters.AccountPresenter": {
             "type": "object",
             "properties": {
                 "document": {
@@ -218,22 +215,19 @@
                 }
             }
         },
-        "queries.Transaction": {
+        "presenters.TransactionPresenter": {
             "type": "object",
             "properties": {
-                "accountID": {
+                "account_id": {
                     "type": "integer"
                 },
                 "amount": {
                     "type": "number"
                 },
-                "eventDate": {
+                "event_date": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
-                "operationTypeID": {
+                "operation_type_id": {
                     "type": "integer"
                 }
             }
